@@ -1,3 +1,8 @@
+2014-01-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/59269
+	* g++.dg/cpp0x/nsdmi-union4.C: New.
+
 2014-01-17  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/59838
