@@ -1,3 +1,9 @@
+2014-01-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/59269
+	* init.c (build_value_init_noctor): Assert !TYPE_HAS_COMPLEX_DFLT
+	only when errorcount == 0.
+
 2014-01-17  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/59838
